<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                   android:layout_height="match_parent" xmlns:adroid="http://schemas.android.com/tools"
                   adroid:fillViewport = "true"
                 android:background = "@color/colorPrimaryDark">
               <!-- android:context=".LoginActivity" -->



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.455"
                    app:srcCompat="@drawable/ic_logoword"
                    />

                <EditText android:layout_width="match_parent" android:layout_height="@dimen/login_edit_text_height"
                          android:id="@+id/editTextEmail" app:layout_constraintTop_toTopOf="parent"
                          android:layout_marginTop="152dp" app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="32dp"
                          android:inputType="textEmailAddress"
                          android:hint="@string/login_email"
                          android:textSize="@dimen/login_text_size"
                          android:background="@drawable/edittext_rounded"
                          android:paddingLeft="@dimen/login_edit_text_space"
                          android:paddingRight="@dimen/login_edit_text_space"
                          app:layout_constraintHorizontal_bias="1.0"/>

                <EditText android:layout_width="match_parent" android:layout_height="@dimen/login_edit_text_height"
                          android:id="@+id/editTextPassword"
                          app:layout_constraintStart_toStartOf="parent"
                          android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="32dp"
                          android:inputType="textPassword"
                          android:hint="@string/login_password"
                          android:textSize="@dimen/login_text_size"
                          android:background="@drawable/edittext_rounded"
                          android:paddingLeft="@dimen/login_edit_text_space"
                          android:paddingRight="@dimen/login_edit_text_space"
                          app:layout_constraintHorizontal_bias="1.0"
                          app:layout_constraintTop_toBottomOf="@+id/editTextEmail" android:layout_marginTop="20dp"/>

                <Button android:id="@+id/buttonLogIn"
                        android:layout_height="@dimen/login_button_xl_height"
                        android:layout_width="match_parent"
                        android:text="@string/login_sign_in"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/login_text_xl_size"
                        android:background="@drawable/button_ripple_bg"
                        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="24dp" android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:id="@+id/textViewForgotPassword"
                          android:text="@string/login_forgot_password"
                          android:textColor="@color/colorSecondaryText"
                          app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
                          app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="24dp" android:layout_marginTop="48dp"
                          android:layout_marginStart="24dp"/>

                <Button android:layout_width="match_parent" android:layout_height="@dimen/login_button_height"
                        android:id="@+id/buttonLogInGoogle"
                        android:text="@string/login_sign_in_google"
                        android:textColor="@color/colorPrimaryText"
                        android:background="@drawable/button_ripple_google"
                        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                        android:layout_marginTop="32dp"/>

                <Button android:layout_width="match_parent" android:layout_height="@dimen/login_button_xl_height"
                        android:id="@+id/buttonCreateAccount"
                        android:background="@drawable/button_ripple_signup"
                        android:text="@string/login_create_account"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/login_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/buttonLogInGoogle"/>

        
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>