<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:adroid="http://schemas.android.com/tools"
            adroid:fillViewport = "true"
            android:background = "@color/colorPrimaryDark" >
    <!-- android:context=".LoginActivity" -->



    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

        <EditText android:layout_width="match_parent" android:layout_height="@dimen/login_edit_text_height"
                  android:id="@+id/editTextEmail" app:layout_constraintTop_toTopOf="parent"
                  android:layout_marginTop="152dp" app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="32dp"
                  android:inputType="textEmailAddress"
                  android:hint="@string/login_email"
                  android:textSize="@dimen/login_text_size"
                  android:background="@drawable/edittext_rounded"
                  android:paddingLeft="@dimen/login_edit_text_space"
                  android:paddingRight="@dimen/login_edit_text_space"
                  app:layout_constraintHorizontal_bias="1.0"/>

        <EditText android:layout_width="match_parent" android:layout_height="@dimen/login_edit_text_height"
                  android:id="@+id/editTextPassword"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="32dp"
                  android:inputType="textPassword"
                  android:hint="@string/login_password"
                  android:textSize="@dimen/login_text_size"
                  android:background="@drawable/edittext_rounded"
                  android:paddingLeft="@dimen/login_edit_text_space"
                  android:paddingRight="@dimen/login_edit_text_space"
                  app:layout_constraintHorizontal_bias="1.0"
                  app:layout_constraintTop_toBottomOf="@+id/editTextEmail" android:layout_marginTop="20dp"/>

        <EditText android:layout_width="match_parent" android:layout_height="@dimen/login_edit_text_height"
                  android:id="@+id/editTextConfirmPassword"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="32dp"
                  android:inputType="textPassword"
                  android:hint="@string/login_confirm_password"
                  android:textSize="@dimen/login_text_size"
                  android:background="@drawable/edittext_rounded"
                  android:paddingLeft="@dimen/login_edit_text_space"
                  android:paddingRight="@dimen/login_edit_text_space"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
                  android:layout_marginTop="20dp"/>

        <Button android:id="@+id/buttonSignUp"
                android:layout_height="@dimen/login_button_xl_height"
                android:layout_width="match_parent"
                android:text="@string/login_sign_up"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                android:background="@drawable/button_ripple_bg"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"/>


        <Button android:layout_width="match_parent" android:layout_height="@dimen/login_button_xl_height"
                android:id="@+id/buttonGoLogIn"
                android:background="@drawable/button_ripple_signup"
                android:text="@string/login_go_login"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="150dp" app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>